# CroCOS

./: .clangd  .gitignore  CMakeLists.txt  debug-build.sh  qemu_wrapper.sh  readme.md  todo.md  toolchain.cmake
kernel/: CMakeLists.txt  KernelMain.cpp  cxxcompat.cpp  general.icd  init.cpp  linker.ld  panic.cpp
kernel/acpi/: ACPIFixedTables.cpp  NUMAIterators.cpp
kernel/arch/: arch.cpp
kernel/arch/amd64/: Amd64Init.cpp  InstructionWrappers.cpp  PageTableManager.cpp  PageTableManager.h  SerialPort.cpp  Spinlock.cpp  amd64.cpp  amd64internal.h  lgdt.asm  linker.ld  memops.cpp  multiboot.h  multiboot1.asm  processor.icd
kernel/arch/amd64/interrupts/: APIC.cpp  APIC.cpp_backup  GenerateIDTInstallMacros.py  InterruptSetup.cpp  InterruptVectorTrampolines.asm  LegacyPIC.cpp  isr.inc  isr_set.inc
kernel/arch/amd64/smp/: smp.cpp  smpboot.asm
kernel/arch/amd64/timers/: HPET.cpp  PIT.cpp
kernel/arch/hal/: ExplicitTypes.cpp  InterruptGraphManager.cpp  InterruptManager.cpp  InterruptRoutingAndDispatch.cpp  InterruptRoutingPolicyImpls.cpp  hal.cpp  interrupts.cpp
kernel/include/: FlushPlanner.h  acpi.h  arch.h  assert.h  init.h  kassert.h  kconfig.h  kernel.h  kmemlayout.h  mm.h  panic.h  timers.h  timing.h  utility.h
kernel/include/acpi/: NUMAIterators.h
kernel/include/arch/: PTEMetadataEntry.h  PageTableSpecification.h  amd64.h  hal.h  memmap.h  spinlock.h
kernel/include/arch/amd64/: amd64.h  smp.h
kernel/include/arch/amd64/interrupts/: APIC.h  APIC.h_backup  AuxiliaryDomains.h  IRQDomain.h  LegacyPIC.h
kernel/include/arch/amd64/timers/: HPET.h  PIT.h
kernel/include/arch/hal/: Clock.h  InterruptGraphs.h  InterruptRoutingPolicy.h  hal.h  interrupts.h  platform.h  spinlock.h
kernel/include/arch/hal/internal/: _InterruptsExplicitTypes.h
kernel/include/interrupts/: InterruptDomains.h  InterruptGraphs.h  InterruptRoutingGraph.h  InterruptRoutingPolicy.h  _InterruptsExplicitTypes.h  interrupts.h
kernel/include/lib/: Comparator.h  PrintStream.h  TypeTraits.h  math.h  str.h
kernel/include/lib/ds/: HashMap.h  Optional.h  SmartPointer.h  Tuple.h  Variant.h  Vector.h
kernel/include/mem/: BootstrapMapper.h  MemTypes.h  NUMA.h  PageAllocator.h  PageAllocatorTuning.h  TempWindow.h  VMSubstrate.h  mm.h
kernel/include/timing/: Clock.h  timing.h
kernel/interrupts/: ExplicitTypes.cpp  InterruptGraphManager.cpp  InterruptRoutingAndDispatch.cpp  InterruptRoutingPolicyImpls.cpp
kernel/lib/: PrintStream.cpp  panic.cpp  str.cpp
kernel/mm/: BumpAllocator.cpp  MemTypes.cpp  MemoryManager.cpp  NUMA.cpp  NewPageAllocator.cpp  PageAllocator.cpp  VMSubstrate.cpp  allocators.h  kmalloc.cpp
kernel/timing/: BlockingSleep.cpp  ClockManager.cpp  TimerManager.cpp  TimerQueues.cpp
libraries/: CMakeLists.txt
libraries/Core/: CMakeLists.txt  ChronoTypes.cpp  FrequencyData.cpp  Object.cpp  PrintStream.cpp  mem.cpp  str.cpp
libraries/Core/atomic/: AtomicBitPool.cpp  atomic.cpp
libraries/Core/include/: assert.h  compare.h  initializer_list.h
libraries/Core/include/core/: ChronoTypes.h  Comparator.h  Flags.h  FrequencyData.h  GraphBuilder.h  Hasher.h  Iterator.h  Object.h  PrintStream.h  SizeClass.h  TypeTraits.h  atomic.h  endian.h  math.h  mem.h  preprocessor.h  utility.h
libraries/Core/include/core/algo/: GraphAlgorithms.h  GraphPredicates.h  sort.h
libraries/Core/include/core/atomic/: AtomicBitPool.h  AtomicLinkedList.h  HighReliabilityRingBuffer.h  RingBuffer.h
libraries/Core/include/core/debug/: DbgStddef.h
libraries/Core/include/core/ds/: Array.h  Bimap.h  Graph.h  Handle.h  HashMap.h  HashSet.h  Heap.h  HighReliabilityRingBuffer.h  IndexedHashTable.h  LinkedList.h  Optional.h  SmartPointer.h  Span.h  Stack.h  Trees.h  Tuple.h  Variant.h  Vector.h  permutation.h
libraries/Core/include/core/internal/: SharedPtrDynamicCast.h
libraries/LibAlloc/: CMakeLists.txt  InternalAllocator.cpp  LibAllocMain.cpp  SlabAllocator.cpp
libraries/LibAlloc/backends/: Kernel.cpp  UnitTests.cpp
libraries/LibAlloc/include/: Backend.h  InternalAllocator.h  liballoc.h
libraries/LibAlloc/include/liballoc/: Allocator.h  InternalAllocator.h  InternalAllocatorDebug.h  PointerArithmetic.h  SlabAllocator.h
libraries/LibExt/: CMakeLists.txt
libraries/LibExt/include/ext/: ext2.h
libraries/LibMMIO/: CMakeLists.txt  Register.cpp
libraries/LibMMIO/include/mmio/: Register.h  _Register.h  _RegisterExplicitTypes.h
stress_tests/: CMakeLists.txt  PageAllocatorStress.cpp  StressAssertSupport.h  StressMocks.cpp
tests/: CMakeLists.txt  TestFramework.h  TestMain.cpp  assert_support.h  instrument_objects.sh  test.h  test_sections.ld
tests/core/: ArrayTest.cpp  AtomicBitPoolConcurrentLinkedList.cpp  AtomicBitPoolGlobalLockMock.cpp  AtomicBitPoolTest.cpp  AtomicLinkedListTest.cpp  CMakeLists.txt  GraphTest.cpp  HeapTest.cpp  HighReliabilityRingBufferTests.cpp  LinkedListTests.cpp  ObjectTest.cpp  OptionalTest.cpp  PermutationTest.cpp  RingBufferTest.cpp  SmartPointerTest.cpp  TreeTest.cpp  VariantTest.cpp  VectorTest.cpp
tests/harness/: MemoryTracker.cpp  MemoryTracker.h  MemoryTrackingGuard.h  TestHarness.cpp  TestHarness.h
tests/kernel/: ArchMocks.cpp  ArchMocks.h  CMakeLists.txt  InterruptGraphTests.cpp  NUMATests.cpp  PageAllocatorTests.cpp
tests/liballoc/: CMakeLists.txt  InternalAllocTest.cpp
tools/: CMakeLists.txt  DeriveKernelLayout.cpp  gen_idt_install_macros.py  gen_init_registry.py  profile_allocator.sh  sample_to_flamegraph.py  toollib.py
